--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/AppMvc.Net.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body class="container">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -29,6 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Planet" asp-action="Index">Planet</a>
                         </li>
                     </ul>
+                    <partial name="_MenuManagePartial"/>
                 </div>
             </div>
         </nav>
