--- a/Views/Shared/_MenuManagePartial.cshtml
+++ b/Views/Shared/_MenuManagePartial.cshtml
@@ -1,8 +1,11 @@
 ﻿<div class="dropdown">
     <a class="btn btn-outline-danger dropdown-toggle" href="#" id="managedropdownmenu" data-bs-toggle="dropdown">Manage</a>
-    <div class="dropdown-menu" aria-labelledby="managedropdownmenu">
+    <div class="dropdown-menu dropdown-menu-end" aria-labelledby="managedropdownmenu">
         <a class="dropdown-item" asp-action="Index" asp-controller="DbManage" asp-area="Database">
             Database
+        </a>
+        <a class="dropdown-item" asp-action="Index" asp-controller="Contact" asp-area="Contact">
+            Quản lý liên hệ
         </a>
     </div> 
 </div>
