--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,8 +20,7 @@ body {
   bottom: 0;
   width: 100%;
   white-space: nowrap;
-  line-height: 60px;
-  /* Vertically center the text there */
+  line-height: 60px; /* Vertically center the text there */
 }
 
 .app-navbar {
@@ -106,4 +105,18 @@ body {
 }
 .detailpost img {
   max-width: 100%;
+}
+
+.photodetail {
+  position: relative;
+}
+.photodetail span {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: none;
+}
+.photodetail:hover span {
+  display: block;
 }
